# metaflow-stack

./: .darglint  .flake8  .gitattributes  MANIFEST.in  README.md  pyproject.toml  setup.py
.githooks/: pre-commit
config/: test
research_daps/: VERSION  __init__.py  __initplus__.py  requirements.txt
research_daps/config/metaflowconfig/: config.json
research_daps/flows/topsbm/: sbmtm.py  topsbm.py
